--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/schedule": "^2.2.2",
     "@nestjs/typeorm": "^9.0.1",
     "cron": "^2.3.1",
+    "dotenv": "^16.1.4",
     "kafka-js": "^0.0.0",
     "kafkajs": "^2.2.4",
     "pg": "^8.10.0",
